Funciona fins a TAC, cal arreglar errors TAC, la resta va